--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/manonbakery?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#MySQL 을 사용할 것.
+spring.jpa.database=mysql
+
+
+# MySQL 상세 지정
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
