--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #MySQL 을 사용할 것.
 spring.jpa.database=mysql
 
-
 # MySQL 상세 지정
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#classpath 경로설정
+spring.thymeleaf.prefix=classpath:/static/
