page 이동 처리, layout 분리 controller Mapping 작업 및 layout header, footer 등 공통 화면 분리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,17 @@ spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #classpath 경로설정
-spring.thymeleaf.prefix=classpath:/static/
+spring.thymeleaf.prefix=classpath:/templates/
+
+#기본 .html 실행
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+
+#;charset=<encoding> is added
+spring.thymeleaf.content-type=text/html
+
+# set to false for hot refresh
+spring.thymeleaf.cache=false
+spring.devtools.livereload.enabled=true
+
